<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/history"
        android:title="@string/hystory"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bulk"
        android:title="@string/bulk"
        app:showAsAction="never" />
    <!--TODO -->
    <item
        android:id="@+id/add_custom"
        android:title="@string/add_custom"
        app:showAsAction="never" />
    <!--TODO -->
    <item
        android:id="@+id/edit_custom"
        android:title="@string/edit_custom"
        app:showAsAction="never" />

</menu>